--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
               个人中心
             </a>
             <dl class="layui-nav-child">
-              <dd><a href="">基本资料</a></dd>
-              <dd><a href="">更换头像</a></dd>
-              <dd><a href="">重置头像</a></dd>
+              <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+              <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
+              <dd><a href="/user/user_pwd.html" target="fm">重置头像</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><i class="layui-icon layui-icon-circle"></i>退出</a></li>
@@ -61,9 +61,18 @@
             <li class="layui-nav-item">
               <a href="javascript:;"><i class="layui-icon layui-icon-user"></i>个人中心</a>
               <dl class="layui-nav-child">
-                <dd><a href="javascript:;"><i class="layui-icon layui-icon-file-b"></i>基本资料</a></dd>
-                <dd><a href="javascript:;"><i class="layui-icon layui-icon-file-b"></i>更换头像</a></dd>
-                <dd><a href="javascript:;"><i class="layui-icon layui-icon-file-b"></i>重置密码</a></dd>
+                <dd>
+                  <a href="/user/user_info.html" target="fm">
+                    <i class="layui-icon layui-icon-file-b"></i>基本资料
+                  </a></dd>
+                <dd>
+                  <a href="/user/user_avatar.html" target="fm">
+                    <i class="layui-icon layui-icon-file-b"></i>更换头像
+                  </a></dd>
+                <dd>
+                  <a href="/user/user_pwd.html" target="fm">
+                    <i class="layui-icon layui-icon-file-b"></i>重置密码
+                  </a></dd>
               </dl>
             </li>
           </ul>
